--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/fonts/fonts.css" />
-    <link rel="stylesheet" href="/styles/global.css" />
-    <link rel="stylesheet" href="/styles/style.css" />
+    <link rel="stylesheet" href="fonts/fonts.css" />
+    <link rel="stylesheet" href="styles/global.css" />
+    <link rel="stylesheet" href="styles/style.css" />
     <title>Оно тебе надо — аукцион вещей, в которые никто не верил</title>
   </head>
   <body>
@@ -27,7 +27,7 @@
       <a class="header__logo">
         <img
           class="header__logo-image"
-          src="/images/logo-black.svg"
+          src="images/logo-black.svg"
           alt="Логотип проекта"
         />
       </a>
@@ -118,7 +118,7 @@
           <div class="about__logo">
             <img
               class="about__logo-image"
-              src="/images/logo-white.svg"
+              src="images/logo-white.svg"
               alt="Логотип проекта"
             />
           </div>
@@ -170,7 +170,7 @@
           <a class="footer__social-link" href="https://www.youtube.com">
             <img
             class="footer__social-icon"
-            src="/images/yt.svg" 
+            src="images/yt.svg" 
             alt="yotube"
             >
           </a>
@@ -179,7 +179,7 @@
           <a class="footer__social-link" href="https://vk.com">
             <img
             class="footer__social-icon"
-            src="/images/vk.svg" 
+            src="images/vk.svg" 
             alt="vkontakte"
             >
           </a>
@@ -188,7 +188,7 @@
           <a class="footer__social-link" href="https://ru.pinterest.com">
             <img
             class="footer__social-icon"
-            src="/images/pinterest.svg" 
+            src="images/pinterest.svg" 
             alt="pinterest"
             >
           </a>
