--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       <section id="cover" class="cover">
         <div class="overlay"></div>
         <h1 class="cover__title">
-          <span class="aligned-text">о
+          <span class="aligned-text aligned-text_left">о
             <span class="letter-spacing-extended">но</span>
           </span>
           <span class="aligned-text aligned-text_center">те  
